--- a/WebContent/templates/template-admin.xhtml
+++ b/WebContent/templates/template-admin.xhtml
@@ -29,7 +29,7 @@
 			<p:menubar>
 				<p:submenu label="#{msgs.tituloOpciones}" icon="ui-icon-document">
 						<p:menuitem value="#{msgs.tituloOpcion1Admin}"
-							action="#{controller.cambioVista}" />
+							action="#{controller.listarUsuarios}" />
 				</p:submenu>
 				<p:submenu style="float:right" label="#{msgs.textoIdioma}" icon="ui-icon-document">
 					<p:menuitem value="#{msgs.enlaceIdiomaES}" actionListener="#{settings.setSpanish}" update="@all" />
