Iniciacion de BBDD y listado de tareas

--- a/WebContent/templates/template-usuario.xhtml
+++ b/WebContent/templates/template-usuario.xhtml
@@ -29,7 +29,7 @@
 			<p:menubar>
 				<p:submenu label="#{msgs.tituloOpciones}" icon="ui-icon-document">
 						<p:menuitem value="#{msgs.tituloOpcion1User}"
-							action="#{controller.cambioVista}" />
+							action="principalUsuario.xhtml" />
 				</p:submenu>
 				<p:submenu style="float:right" label="#{msgs.tituloConfiguracion}" icon="fa fa-gear">
 						<p:menuitem value="#{msgs.tituloCerrarSesion}"
