--- a/WebContent/templates/template-inicio.xhtml
+++ b/WebContent/templates/template-inicio.xhtml
@@ -21,7 +21,7 @@
 			<table border="5" align="center">
 				<tr>
 					<th class="title">
-						<ui:insert name="titulo">#{msgs.tituloDefectoCabecera}</ui:insert>
+						<ui:insert name="titulo">#{msgs.tituloLogin}</ui:insert>
 					</th>
 				</tr>
 			</table>
