--- a/WebContent/templates/template-usuario.xhtml
+++ b/WebContent/templates/template-usuario.xhtml
@@ -7,6 +7,7 @@
 	xmlns:p="http://primefaces.org/ui">
 	
 <f:view locale="#{settings.locale}">
+<!-- <link rel="stylesheet" type="text/css" href="/css/estilos.css" media="screen" /> -->
 	<h:head>
 		<title>#{msgs.tituloHead}</title>
 	</h:head>
