--- a/WebContent/templates/template-usuario.xhtml
+++ b/WebContent/templates/template-usuario.xhtml
@@ -7,7 +7,6 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <f:view locale="#{settings.locale}">
-<!-- <link rel="stylesheet" type="text/css" href="/css/estilos.css" media="screen" /> -->
 	<h:head>
 		<title>#{msgs.tituloHead}</title>
 	</h:head>
@@ -30,7 +29,7 @@
 				<p:submenu id="opciones" label="#{msgs.tituloOpciones}"
 					icon="ui-icon-document">
 					<p:menuitem id="misTareas" value="#{msgs.tituloOpcion1User}"
-						action="principalUsuario.xhtml" />
+						action="#{controller.volverAListas()}" />
 				</p:submenu>
 				<p:submenu style="float:right" label="#{msgs.tituloConfiguracion}"
 					icon="fa fa-gear">
@@ -46,6 +45,22 @@
 				</p:submenu>
 			</p:menubar>
 		</h:form>
+		<br />
+		
+		<p:panel header="#{msgs.headerCategorias}">
+			<p:dataTable var="var"
+					value="#{controller.categorias}" border="1">
+				<p:column headerText="#{msgs.idPrincipal}" 
+							style="text-align:center">
+					<h:outputText value="#{var.id}"/>
+				</p:column>
+				
+				<p:column headerText="#{msgs.nombrePrincipal}" 
+							style="text-align:center">
+					<h:outputText value="#{var.name}"/>
+				</p:column>		
+			</p:dataTable>
+		</p:panel>
 		<br />
 
 		<ui:insert name="cuerpo">#{msgs.tituloDefectoCuerpo}</ui:insert>
